--- a/css/home.css
+++ b/css/home.css
@@ -30,7 +30,7 @@ li a {
 /* Header by Juha Kärnä */
 .header {
   padding: 15vw;
-  background-image: url("images/isCoffeeGood4u.jpg");
+  background-image: url("../images/isCoffeeGood4u.jpg");
     background-repeat: no-repeat; 
     background-size: 100% 100%; 
     background-position: center;
@@ -39,8 +39,7 @@ li a {
 
 /* intro and hull made by Juha Kärnä*/
 .intro {
-    background-color: #f5d5a6;
-    color: white;
+    background-color: #f5debb;
     flex: 100%;
     padding: 20px;
     font-size: 2.4vh;
@@ -48,21 +47,37 @@ li a {
   }
 
   .introText {
-    margin-left: 30%;
+    margin-left: 40%;
     padding: 20px;
 }
 
 .hull {
     background-color: #f5d5a6;
-    color: white;
-    flex: 100%;
     padding: 20px;
     font-size: 2.4vh;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
 
   }
-  
-  .hullText {
-    margin-left: 30%;
+.hull > h1 {
+  display: block;
+  		margin-left: auto;
+  		margin-right: auto;
+  		width: 50%;
+}
+  .hull > div {
+    width: 100%;
+  }
+.hull2{
+  background-color: #f5d5a6;
     padding: 20px;
     font-size: 2.4vh;
-  }
+    display: flex;
+    flex-direction: row;
+}
+  
+.hull2 > div {
+  width: 100%;
+  text-align: center;
+}
