--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -10,24 +10,27 @@
 
 body {
 margin: 0;
-background-color: rgb(252, 209, 158);
+background-color: rgb(243, 204, 157);
 }
 .leftbar{
     color: black;
     width: 600px;
     border: 4px solid rgb(247, 187, 77);
     background-color: #ffe0b3;
-    
-    
+    padding-left: 5px;
+    padding-right: 5px;   
 }
 .rightbar{
     color: black;
     width: 620px;
     border: 4px solid rgb(247, 187, 77);
     background-color:  #ffe0b3;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 header {
-margin-top: 10px;
+margin-top: 50px;
+padding-top: 50px;
 font-size: x-large;
 text-align: center;
 font-weight: bold;
