map and information

--- a/css/contact.css
+++ b/css/contact.css
@@ -7,6 +7,7 @@
 .contact-section h1{
     text-align: center;
     color: black; 
+
  }
 .contact-form{
     max-width: 600px;
@@ -24,10 +25,36 @@
     padding: 20px 40px;
     outline: none;
     color: black;
-    transform: 0.5s;
+   
 }
 textarea.contact-form-text{
     resize: none;
     height: 120px;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.mapandinformation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 0;
+    
+}
+.mapBox{
+   margin-left: 10%;
+   margin-top: 5%;
+
+}
+.information{
+    text-align: center;
+    flex-basis: 40%;
+    position: relative;
+    margin-right: 150px;
+    font-weight: 100;
+    margin-top: 5%;
+}
+
 
