--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 
@@ -30,6 +30,8 @@ li a {
     margin-left: 35vh;
 }
 
+
+
 /* Header by Juha Kärnä */
 .header {
   padding: 15vw;
@@ -47,7 +49,7 @@ li a {
     padding: 20px;
     font-size: 2.4vh;
     font-family: 'Open Sans', sans-serif;
-
+    padding-bottom: 5.5%;
   }
 
   .introText {
@@ -63,13 +65,14 @@ li a {
     flex-direction: row;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    width: 100%;
 
   }
 .hull > h1 {
   display: block;
   		margin-left: auto;
   		margin-right: auto;
-  		width: 50%;
+      width: 50%;
 }
   .hull > div {
     width: 100%;
@@ -91,7 +94,8 @@ li a {
 /* mobile made by Juha Kärnä */
 @media only screen and (max-width: 500px) {
   .header {
-    display: none;
+    padding: 25vh;
+    background-size: cover;
   }
   .navbar-brand {
     margin: 0;
@@ -101,21 +105,20 @@ li a {
   }
 
  .intro > img {
-    display: none;
+    max-width: 100%;
+    min-width: 300px;
+    height: auto;
   }
   
   ul {
     margin: 0;
   }
   .introText {
-    margin-top: 10vh;
-    margin-left: auto;
-  		margin-right: auto;
-  		width: 50%;
+    margin-left: 0;
+    margin-top: 3vh;
   }
 
   .intro {
-    padding-top: 15vh;
     display: flex;
     flex-direction: column;
   }
