--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -53,7 +53,41 @@ ul.separator li {
 * {
     box-sizing: border-box;
   }
+/*Siljas part on css ends here*/
 
+
+/* mobile made by Juha Kärnä */
+@media only screen and (max-width: 500px) {
+    .header {
+      display: none;
+    }
+    .navbar-brand {
+      margin: 0;
+    }
+    .nav-link {
+     margin: 0;
+    }
+  
+   .intro > img {
+      display: none;
+    }
+    
+    ul {
+      margin: 0;
+    }
+    .introText {
+      margin-top: 10vh;
+      margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+    }
+  
+    .intro {
+      padding-top: 15vh;
+      display: flex;
+      flex-direction: column;
+    }
+  }
 
 
 
