--- a/css/contact.css
+++ b/css/contact.css
@@ -60,13 +60,19 @@ textarea.contact-form-text{
     background-color: #ffe0b3;
 }
  
-
-/*mobile*/
+/*mobile made by Tea Lyytinen*/
 
 @media only screen and (max-width:700px){
     .mapandinformation{
         flex-direction: column-reverse;
         margin: 50px 0;
+}
+.mapBox{
+   margin: auto;
+ }
+ .information{
+    margin: auto; 
+    margin-top: 50%; 
 }
 
 }
