--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -14,7 +14,7 @@ background-color: rgb(243, 204, 157);
 }
 .leftbar{
     color: black;
-    width: 600px;
+    width: 50%;
     border: 4px solid rgb(247, 187, 77);
     background-color: #ffe0b3;
     padding-left: 5px;
@@ -22,7 +22,7 @@ background-color: rgb(243, 204, 157);
 }
 .rightbar{
     color: black;
-    width: 620px;
+    width: 50vw;
     border: 4px solid rgb(247, 187, 77);
     background-color:  #ffe0b3;
     padding-left: 5px;
